fix event card text overflow

--- a/css/home/events.css
+++ b/css/home/events.css
@@ -3,8 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+    padding: 3rem 4rem;
     gap: 2rem;
 }
 
@@ -24,9 +23,10 @@
     box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
     background-color: #0E1133;
     display: flex;
-    flex-direction: row;
     gap: 1rem;
     transition: 200ms;
+    flex-direction: column;
+    width: 100%;
 }
 
 .event-card-left {
@@ -37,7 +37,7 @@
 }
 
 .event-image {
-    height: 10rem;
+    width: 100%;
     object-fit: cover;
     border-radius: 1rem;
 }
@@ -101,11 +101,6 @@
         justify-content: center;
     }
 
-    .event-card {
-        flex-direction: column;
-        width: 100%;
-    }
-
     .event-card-left {
         flex-direction: column;
         align-items: center;
@@ -140,7 +135,7 @@
     }
 
     .event-image {
-        width: 100%;
+        
         aspect-ratio: 3 / 1;
     }
 }
